# portfolio-analysis-funds

./: .gitignore  Data Extract.ipynb  Fund analysis.ipynb  README.md  proposal.md  pyproject.toml
data/: canadian_mutual_funds.csv
