[project]
name = "portfolio-analysis-funds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]
